--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.3.1"
   }
 }
