--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . && eslint --fix",
     "format": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "lint-staged": {
     "src/**/*.{html,ts,scss}": [
